--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link active px-3" aria-current="page" href="index.html">Início</a>
+                        <a class="nav-link px-3" aria-current="page" href="index.html">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-3" href="about.html">Sobre Nós</a>
+                        <a class="nav-link active px-3" href="about.html">Sobre Nós</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link px-3" href="contact-us.html">Fale Conosco</a>
