--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
 
     <main class="container hero-section">
         <div class="row align-items-center my-5">
-            <div class="w-100 d-flex justify-content-center mb-5">
-                <div class="justify-content-center text-lg-start section-title w-50" style="font-size: 46px;"><p class="text-center">Nós criamos oportunidades para o produtor rural e protagonismo para crianças.</p></div>
+            <div class="d-flex justify-content-center">
+                <p class="section-title w-50 text-center">Nós criamos oportunidades para o produtor rural e protagonismo para crianças.</p>
             </div>
             <div class="col-lg-7 hero-text">
                 <p class="mb-3">No AgroTherapy, acreditamos no poder transformador do campo para promover bem-estar e desenvolvimento.</p>
